Bug 392773 - c++ importer does not recognize inline keyword
Summary: c++ importer does not recognize inline keyword
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: importer (other bugs)
Version First Reported In: 2.24.3 (KDE Applications 17.12.3)
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-04-05 19:42 UTC by Ralf Habacker
Modified: 2018-04-08 22:34 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.25.80 (KDE Applications 18.07.80)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2018-04-05 19:42:10 UTC
How to reproduce:

1. start umbrello
2. import the following code into umbrello

class InlinedMethod {
    inline void inlinedMethod() {}
    void nonInlinedMethod();
};

3. Open properties for imported methods in class 'InlinedMethod'

What happens ?
There are no information displayed for the 'inline' keyword

What is required ?
The inline keyword should be imported and displayed
Comment 1 Ralf Habacker 2018-04-05 20:42:37 UTC
Git commit 40018f4fb5a0474a5a296c01cd02677a2d5f4247 by Ralf Habacker.
Committed on 05/04/2018 at 20:42.
Pushed by habacker into branch 'master'.

Fix 'c++ importer does not recognize inline keyword'

Added also a c++ test case for this keyword.
FIXED-IN: 2.25.80 (KDE Applications 18.07.80)

A  +4    -0    test/import/cxx/inline-methods.h     [License: UNKNOWN]  *
M  +12   -6    umbrello/codeimport/kdevcppparser/cpptree2uml.cpp
M  +5    -1    umbrello/dialogs/umloperationdialog.cpp
M  +1    -0    umbrello/dialogs/umloperationdialog.h
M  +19   -0    umbrello/uml1model/operation.cpp
M  +3    -0    umbrello/uml1model/operation.h
M  +2    -2    umbrello/version.h

The files marked with a * at the end have a non valid license. Please read: https://community.kde.org/Policies/Licensing_Policy and use the headers which are listed at that page.


https://commits.kde.org/umbrello/40018f4fb5a0474a5a296c01cd02677a2d5f4247
Comment 2 Ralf Habacker 2018-04-08 22:34:12 UTC
Git commit 5ced4fff73b4f57d8f5ed5c0750b7cc496eff3d6 by Ralf Habacker.
Committed on 08/04/2018 at 22:30.
Pushed by habacker into branch 'master'.

Fixup of commit 40018f4fb - document xmi attribute 'isInline'

The xmi 'isInline' attribute has been added by the associated commit
and is documented in uml-1.4-umbrello.dtd because it is umbrello-specific.

M  +2    -1    doc/xml/uml-1.4-umbrello.dtd

https://commits.kde.org/umbrello/5ced4fff73b4f57d8f5ed5c0750b7cc496eff3d6
Comment 3 Ralf Habacker 2018-04-08 22:34:12 UTC
Git commit 2e90bfc2764cdfcaf7f4b16642e8a167d98312e3 by Ralf Habacker.
Committed on 08/04/2018 at 22:33.
Pushed by habacker into branch 'master'.

Fixup of commit 40018f4fb

Fix copy and paste error on saving inline operation state.

M  +3    -1    umbrello/uml1model/operation.cpp

https://commits.kde.org/umbrello/2e90bfc2764cdfcaf7f4b16642e8a167d98312e3