Fix 'c++ importer does not recognize inline keyword'

Added also a c++ test case for this keyword.

BUG:392773
FIXED-IN: 2.25.80 (KDE Applications 18.07.80)