test/import/cxx/inline-methods.h
@@ -1,0 +1,4 @@
+class InlinedMethod {
+    inline void inlinedMethod() {}
+    void nonInlinedMethod();
+};
